# Francois

./: CMakeLists.txt  README.md
example/: main.cpp
example/include/: Determinant_Operations.hpp  Determinant_Sanity.hpp  Determinant_Utility.hpp  Matrix_Analytical.hpp  Matrix_Operations.hpp  Matrix_Sanity.hpp  Matrix_Utility.hpp
include/: Determinant.hpp  ElementProtocol.hpp  ElementSequence.hpp  Entity.hpp  Helper.hpp  Matrix.hpp  MatrixAdjunct.hpp  MatrixComponents.hpp  MatrixElementProtocol.hpp  MultiSequence.hpp  MultiSequenceComponents.hpp
src/: Entity.cpp
tests/: CMakeLists.txt  SimpleTest.cpp  algebra_Determinant_AnalyticalTests.cpp  algebra_Determinant_OperationsTests.cpp  algebra_Determinant_SanityTests.cpp  algebra_Determinant_UtilityTests.cpp  algebra_Matrix_AnalyticalTests.cpp  algebra_Matrix_OperationsTests.cpp  algebra_Matrix_SanityTests.cpp  algebra_Matrix_UtilityTests.cpp
tests/_determinant/: algebra_Determinant_AnalyticalTests.cpp  algebra_Determinant_OperationsTests.cpp  algebra_Determinant_SanityTests.cpp  algebra_Determinant_UtilityTests.cpp
tests/_matrix/: algebra_Matrix_AnalyticalTests.cpp  algebra_Matrix_OperationsTests.cpp  algebra_Matrix_SanityTests.cpp  algebra_Matrix_UtilityTests.cpp
